Loop cut cuts through ngons and tris in some cases #33285

Closed
opened 2012-11-24 13:10:53 +01:00 by Susanne H. · 4 comments

%%%When using loop cut on a mesh the cut sometimes splits ngons and triangles, please see attached screenshot and blend file. Top left picture shows expected behaviour, the others show this bug.

We had a discussion on BA with Campbell a while back about this and most of us thought it best to terminate loop cuts at any non-quad, and AFAIK it has been implemented that way, so the behaviour described here seems to be inconsistent.

Link to BA thread discussion, goes on for 2 or 3 pages:
http://blenderartists.org/forum/showthread.php?225223-BMesh-is-more-alive-than-ever!&p=2062354&viewfull=1#post2062354

And to new discussion about behaviour described in this bug report:
http://blenderartists.org/forum/showthread.php?225223-Are-you-ready-for-new-BMesh-tools&p=2243508&viewfull=1#post2243508

My system:
Arch Linux 64 Bit
Nvidia GeForce GT 220 with prop. Nvidia driver 310.19
Blender rev. 52531, self compiled

Thanks,
Sanne
%%%

%%%When using loop cut on a mesh the cut sometimes splits ngons and triangles, please see attached screenshot and blend file. Top left picture shows expected behaviour, the others show this bug. We had a discussion on BA with Campbell a while back about this and most of us thought it best to terminate loop cuts at any non-quad, and AFAIK it has been implemented that way, so the behaviour described here seems to be inconsistent. Link to BA thread discussion, goes on for 2 or 3 pages: http://blenderartists.org/forum/showthread.php?225223-BMesh-is-more-alive-than-ever!&p=2062354&viewfull=1#post2062354 And to new discussion about behaviour described in this bug report: http://blenderartists.org/forum/showthread.php?225223-Are-you-ready-for-new-BMesh-tools&p=2243508&viewfull=1#post2243508 My system: Arch Linux 64 Bit Nvidia GeForce GT 220 with prop. Nvidia driver 310.19 Blender rev. 52531, self compiled Thanks, Sanne %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%What seems to go wrong is that when the loop goes all the way around the mesh and there is just one triangle/ngon between the intended start and end point, it still connects an edge through the triangle/ngon.%%%

%%%What seems to go wrong is that when the loop goes all the way around the mesh and there is just one triangle/ngon between the intended start and end point, it still connects an edge through the triangle/ngon.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33285
No description provided.