Fix #33285: loop cut is not supposed to cut through triangles/ngons, but it still happened  when the loop would go all the way around the mesh with just one triangle/ngon inbetween to close the loop.